# fabutils

./: .gitignore  README.md  pyproject.toml
docs/: dgp.ipynb
fabutils/: __init__.py
fabutils/dgp/: __init__.py  dgp.py
fabutils/io/: __init__.py  gbq.py
fabutils/stats/: exp_eval.py
fabutils/wrangle/: preproc.py  sampling.py
