[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabutils"
version = "0.0.1"
authors = [
  { name="Fabian Gunzinger", email="fa.gunzinger@gmail.com" },
]
description = "Fabulously useful utility functions for data science."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fabiangunzinger/fabutils"
"Bug Tracker" = "https://github.com/fabiangunzinger/fabutils/issues"
